--- a/package.json
+++ b/package.json
@@ -10,10 +10,17 @@
     "docs:preview": "vitepress preview docs"
   },
   "devDependencies": {
+    "@braintree/sanitize-url": "^7.1.2",
+    "cytoscape": "^3.33.1",
+    "cytoscape-cose-bilkent": "^4.1.0",
+    "dayjs": "^1.11.19",
+    "debug": "^4.4.3",
     "echarts": "^5.6.0",
+    "mermaid": "^11.12.2",
     "sass": "^1.89.1",
     "vitepress": "^1.6.3",
     "vitepress-plugin-llms": "^1.7.3",
+    "vitepress-plugin-mermaid": "^2.0.17",
     "vitepress-theme-teek": "^1.5.4"
   },
   "dependencies": {
