--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,36 +1,19 @@
-name: Deploy to Retinbox
+name: Deploy to Retinbox Web Hosting
 
-on:
-  push:
-    branches: [master]  # 注意：你的分支是 master，不是 main
+on: push
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    
+    container:
+      image: shangzheny/rth-host-helper:latest
+
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v4
-        with:
-          version: 10
-          run_install: false
-      
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: 'pnpm'
-      
-      - name: Install dependencies
-        run: pnpm install
-      
-      - name: Build VitePress
-        run: pnpm docs:build
-      
-      - name: Deploy to Retinbox
-        run: npx -y rth-host-helper@latest deploy
+      - name: Deploy to Retinbox Web Hosting
+        uses: rthsoftware/host-auto-deploy@master
         env:
           RTH_API_KEY: ${{ secrets.RTH_API_KEY }}
+        with:
+          site: "mcoo"
+          build: "docs:build"
+          outdir: "docs/.vitepress/dist"
