--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,6 @@ jobs:
         env:
           RTH_API_KEY: ${{ secrets.RTH_API_KEY }}
         with:
-          site: "mcoo"
+          site: "mcoo.top"
           build: "docs:build"
           outdir: "docs/.vitepress/dist"
