ci(部署): 更新Retiehe部署流程为使用Linux原生方式
使用curl下载Retiehe CLI工具并执行部署，替代原有的pnpm run deploy命令

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,11 @@ jobs:
       - name: Build site
         run: pnpm run docs:build
 
-      - name: Deploy to Retiehe
-        run: pnpm run deploy
+      - name: Deploy to Retiehe (Linux native)
+        run: |
+          f=$(mktemp)
+          curl -fSL https://host.retiehe.com/cli -o $f
+          node $f --site mcoo.top --outdir ./docs/.vitepress/dist
+          rm $f
         env:
           RTH_API_KEY: ${{ secrets.RTH_API_KEY }}
