--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
-    "docs:preview": "vitepress preview docs"
+    "docs:preview": "vitepress preview docs",
+    "deploy": "powershell -c \"$f=New-TemporaryFile; iwr https://host.retiehe.com/cli -OutFile $f; node $f --site mccc.top --build docs:build --outdir docs/.vitepress/dist; rm $f -Force\""
   },
   "devDependencies": {
     "@braintree/sanitize-url": "^7.1.2",
